Fix if port != 80

--- a/public/qrcode/index.html
+++ b/public/qrcode/index.html
@@ -23,7 +23,7 @@
       <strong>Compatibily :</strong> 
       <ul>
         <li><strong>iOS :</strong> OK (Safari, Chrome).</li>
-        <li><strong>Android :</strong> Seem not working</li>
+        <li><strong>Android :</strong> Not tested</li>
         <li><strong>Windows Phone :</strong> Not tested</li>
       </ul>
       <div class="btn-group" data-toggle="buttons-radio">
@@ -48,10 +48,10 @@
     </div>
   </div>
 </div>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<script src="../javascripts/jquery.js"></script>
+<script src="../javascripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script src="/javascripts/client.js"></script>
+<script src="../javascripts/client.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
   socketQrCode.initSocketIo();
